Improve `bfg-card` mixin (and demo `14.html`)

--- a/src/demo-attr/14.html
+++ b/src/demo-attr/14.html
@@ -63,6 +63,36 @@
         <div bfg-card__content>Content</div>
       </div>
 
+      <div bfg-card="primary">
+        <div bfg-card__header>Primary</div>
+        <div bfg-card__content>Content</div>
+      </div>
+
+      <div bfg-card="secondary">
+        <div bfg-card__header>Secondary</div>
+        <div bfg-card__content>Content</div>
+      </div>
+
+      <div bfg-card="success">
+        <div bfg-card__header>Success</div>
+        <div bfg-card__content>Content</div>
+      </div>
+
+      <div bfg-card="danger">
+        <div bfg-card__header>Danger</div>
+        <div bfg-card__content>Content</div>
+      </div>
+
+      <div bfg-card="info">
+        <div bfg-card__header>Info</div>
+        <div bfg-card__content>Content</div>
+      </div>
+
+      <div bfg-card="warning">
+        <div bfg-card__header>Warning</div>
+        <div bfg-card__content>Content</div>
+      </div>
+
       Ut enim ad minim veniam, quis nostrud exercitation ullamco
       laboris nisi ut aliquip ex ea commodo consequat.
 
