--- a/src/demo-class/14.html
+++ b/src/demo-class/14.html
@@ -63,6 +63,36 @@
         <div class="bfg-card__content">Content</div>
       </div>
 
+      <div class="bfg-card bfg-card--primary">
+        <div class="bfg-card__header">Primary</div>
+        <div class="bfg-card__content">Content</div>
+      </div>
+
+      <div class="bfg-card bfg-card--secondary">
+        <div class="bfg-card__header">Secondary</div>
+        <div class="bfg-card__content">Content</div>
+      </div>
+
+      <div class="bfg-card bfg-card--success">
+        <div class="bfg-card__header">Success</div>
+        <div class="bfg-card__content">Content</div>
+      </div>
+
+      <div class="bfg-card bfg-card--danger">
+        <div class="bfg-card__header">Danger</div>
+        <div class="bfg-card__content">Content</div>
+      </div>
+
+      <div class="bfg-card bfg-card--info">
+        <div class="bfg-card__header">Info</div>
+        <div class="bfg-card__content">Content</div>
+      </div>
+
+      <div class="bfg-card bfg-card--warning">
+        <div class="bfg-card__header">Warning</div>
+        <div class="bfg-card__content">Content</div>
+      </div>
+
       Ut enim ad minim veniam, quis nostrud exercitation ullamco
       laboris nisi ut aliquip ex ea commodo consequat.
 
