Improve demo `15.html`

--- a/src/demo-attr/15.html
+++ b/src/demo-attr/15.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../styles/demo.scss">
-  <link rel="stylesheet" href="15.scss">
+  <link rel="stylesheet" href="../lib/bem-flex-grid-attr.scss">
 
   <script src="../script.ts"></script>
 </head>
@@ -49,9 +49,9 @@
 
         <div bfg__box>
           <!-- nested card definition (as box child) -->
-          <div bfg-card="info">
+          <div bfg-card="warning">
             <div bfg-card__header>Header</div>
-            <div bfg-card__content><!-- use local "info" theme --></div>
+            <div bfg-card__content><!-- use local "warning" theme --></div>
           </div>
         </div>
       </div>
