--- a/src/demo-class/15.html
+++ b/src/demo-class/15.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../styles/demo.scss">
-  <link rel="stylesheet" href="15.scss">
+  <link rel="stylesheet" href="../lib/bem-flex-grid-class.scss">
 
   <script src="../script.ts"></script>
 </head>
@@ -49,9 +49,9 @@
 
         <div class="bfg__box">
           <!-- nested card definition (as box child) -->
-          <div class="bfg-card bfg-card--info">
+          <div class="bfg-card bfg-card--warning">
             <div class="bfg-card__header">Header</div>
-            <div class="bfg-card__content"><!-- use local "info" theme --></div>
+            <div class="bfg-card__content"><!-- use local "warning" theme --></div>
           </div>
         </div>
       </div>
