--- a/src/demo.html
+++ b/src/demo.html
@@ -73,6 +73,10 @@
     Made with <b>&hearts;</b> by Avine.
   </footer>
 
-  <script>Demo.showcase();</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      Demo.showcase();
+    });
+  </script>
 </body>
 </html>
