--- a/src/demo-class/1.html
+++ b/src/demo-class/1.html
@@ -36,6 +36,12 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      Demo.viewCode();
+      Demo.fillGrid();
+      Demo.enableActions();
+    });
+  </script>
 </body>
 </html>
