--- a/src/demo-class/12.html
+++ b/src/demo-class/12.html
@@ -40,6 +40,12 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      Demo.viewCode();
+      Demo.fillGrid();
+      Demo.enableActions();
+    });
+  </script>
 </body>
 </html>
