--- a/src/demo-class/16.html
+++ b/src/demo-class/16.html
@@ -65,13 +65,16 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'gridDirection', 'gridGap']);</script>
-
   <script>
-    const ctx = document.querySelectorAll('.demo-chart');
-    for (let i = 0; i < ctx.length; i++) {
-      Demo.chart(ctx[i]);
-    }
+    document.addEventListener('DOMContentLoaded', () => {
+      Demo.viewCode();
+      Demo.enableActions(['fullWidth', 'gridDirection', 'gridGap']);
+
+      const ctx = document.querySelectorAll('.demo-chart');
+      for (let i = 0; i < ctx.length; i++) {
+        Demo.chart(ctx[i]);
+      }
+    });
   </script>
 </body>
 </html>
