--- a/src/demo-attr/15.html
+++ b/src/demo-attr/15.html
@@ -59,6 +59,12 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.enableActions();</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      Demo.viewCode();
+      Demo.fillGrid({ textColor: false });
+      Demo.enableActions();
+    });
+  </script>
 </body>
 </html>
