--- a/src/demo-attr/5.html
+++ b/src/demo-attr/5.html
@@ -42,6 +42,12 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'gridGap']);</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      Demo.viewCode();
+      Demo.fillGrid();
+      Demo.enableActions(['fullWidth', 'gridGap']);
+    });
+  </script>
 </body>
 </html>
