--- a/src/index.html
+++ b/src/index.html
@@ -86,10 +86,10 @@
 <h3>Try it</h3>
 <p>To get instant access to the library, insert the link tag of the implementation of your choice into your web pages from <em>unpkg</em> CDN.</p>
 <p><em>Class syntax:</em></p>
-<pre><code class="language-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid-class.css&quot;&gt;
+<pre><code class="language-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid-class.min.css&quot;&gt;
 </code></pre>
 <p><em>Attr syntax:</em></p>
-<pre><code class="language-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid-attr.css&quot;&gt;
+<pre><code class="language-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid-attr.min.css&quot;&gt;
 </code></pre>
 <p><em>Here's the full markup of the example above using the class syntax:</em></p>
 <pre><code class="language-html">&lt;!DOCTYPE html&gt;
@@ -98,7 +98,7 @@
   &lt;meta charset=&quot;utf-8&quot;&gt;
   &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1&quot;&gt;
   &lt;title&gt;Bem Flex Grid - Class&lt;/title&gt;
-  &lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid-class.css&quot;&gt;
+  &lt;link rel=&quot;stylesheet&quot; href=&quot;https://unpkg.com/bem-flex-grid/dist/bem-flex-grid-class.min.css&quot;&gt;
   &lt;style&gt;html, body { height:100%; margin:0; }&lt;/style&gt;
 &lt;/head&gt;
 &lt;body&gt;
@@ -151,7 +151,7 @@
       │  └─ _mixins.scss
       ├─ _variables.scss
       ├─ bem-flex-grid-attr.scss
-      ├─ bem-flex-grid-class.scss
+      └─ bem-flex-grid-class.scss
 </code></pre>
 <blockquote>
 <p>The <code>dist</code> folder also contains the <strong>sourcemap</strong> for each CSS file.</p>
