--- a/src/demo-class/1.html
+++ b/src/demo-class/1.html
@@ -40,7 +40,7 @@
     document.addEventListener('DOMContentLoaded', () => {
       Demo.viewCode();
       Demo.fillGrid();
-      Demo.enableActions();
+      Demo.enableActions(['fullWidth', 'autoHeight', 'gridGap']);
     });
   </script>
 </body>
