Improve the card system and update README

--- a/src/demo-attr/14.html
+++ b/src/demo-attr/14.html
@@ -69,6 +69,8 @@
       </div>
 
       <div bfg-card="secondary">
+        <a href="#" bfg-card__action>Action 2</a>
+        <a href="#" bfg-card__action>Action 1</a>
         <div bfg-card__header>Secondary</div>
         <div bfg-card__content>Content</div>
       </div>
