--- a/src/demo-class/14.html
+++ b/src/demo-class/14.html
@@ -69,6 +69,8 @@
       </div>
 
       <div class="bfg-card bfg-card--secondary">
+        <a href="#" class="bfg-card__action">Action 2</a>
+        <a href="#" class="bfg-card__action">Action 1</a>
         <div class="bfg-card__header">Secondary</div>
         <div class="bfg-card__content">Content</div>
       </div>
